--- a/calculator.html
+++ b/calculator.html
@@ -14,6 +14,15 @@
     <script src="calculator.js"></script>
 </head>
 <body>
+    <header>
+        <!-- Image and text -->
+        <nav class="navbar navbar-light">
+            <a class="navbar-brand" href="#">
+                <img src="./logo.png" alt="" class="d-inline-block align-top header-logo">
+                GitDemo
+            </a>
+        </nav>
+    </header>
     
     <div class="container">
         <div class="card text-center">
